@@ -1,3 +1,7 @@
+2564.	[bug]		'named' was treating a TCP retry as a timeout when
+			deciding whether to perform a EDNS fallback step.
+			[RT #19393]
+
 2563.	[bug]		Dig could leak a socket causing it to wait forever
 			to exit. [RT #19359]
 
